# SimpleSpecs2

./: .env.example  .env.production  .env.production.example  .env.template  .gitignore  Plan.md  README.md  agents.md  pyproject.toml  requirements.txt  run.py  simplespecs.spec  start_local.bat  start_local.sh
.github/: pull_request_template.md
agents/: Phase-00-Foundations-&-Environment.agent.md  Phase-02-Native-PDF-Parsing-Engine.agent.md  Phase-03-Header-&-Subheader-Extraction-(LLM-+-Rules).agent.md  Phase-04-Specification-Extraction-by-Discipline.agent.md  Phase-06-Semantic-Comparison-&-Risk-Scoring.agent.md  Phase-07-Frontend-Modernization-(ESM-JS-UI).agent.md  Phase-08-Persistence,-Reports,-and-Export.agent.md  Phase-09-Testing,-Validation,-and-Hardening.agent.md  Phase-10-Deployment-&-Packaging.agent.md  Phase-11-Observability-&-Telemetry.agent.md  Phase-12-Security-&-Compliance-Hardening.agent.md  Phase-13-Operational-Readiness-&-Runbooks.agent.md
backend/: __init__.py  __main__.py  config.py  database.py  main.py  migrations.py  paths.py
frontend/: index.html
multipart/: __init__.py  multipart.py
plan/: Config-Toggles.md  File-Tree.md  Glossary.md  Phase-00-Foundations-&-Environment.md  Phase-02-Native-PDF-Parsing-Engine.md  Phase-03-Header-&-Subheader-Extraction-(LLM-+-Rules).md  Phase-04-Specification-Extraction-by-Discipline.md  Phase-06-Semantic-Comparison-&-Risk-Scoring.md  Phase-07-Frontend-Modernization-(ESM‑JS-UI).md  Phase-08-Persistence,-Reports,-and-Export.md  Phase-09-Testing,-Validation,-and-Hardening.md  Phase-10-Deployment-&-Packaging.md  (+6 more)
(+169 files in other folders)
