[project]
name = "simplespecs"
version = "0.1.0"
description = "Backend service and tooling for the SimpleSpecs application."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlmodel==0.0.16",
    "PyMuPDF>=1.24.9",
    "pypdfium2>=4.30.0",
    "pdfplumber==0.11.3",
    "camelot-py[cv]==0.11.0",
    "pytesseract==0.3.10",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "httpx==0.27.0",
    "requests==2.32.3",
    "python-docx==1.1.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.10,<1.13",
    "pip-audit>=2.7,<2.8",
    "pre-commit>=3.7,<4.0",
    "pytest>=8.2,<8.3",
    "pytest-cov>=5.0,<6.0",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
show_error_codes = true
strict_optional = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests", "backend/tests"]
